# Coincer

./: .gitignore  AUTHORS  ChangeLog  DEV-CODESTYLE  DEV-HANDBOOK  Makefile.am  NEWS  NOTES  README  README.md  autogen.sh  configure.ac
src/: coincer.c  coincerd.c  configuration.c  configuration.h  crypto.c  crypto.h  daemon_events.c  daemon_events.h  daemon_messages.c  daemon_messages.h  daemon_messages_processor.c  daemon_messages_processor.h  filing.c  filing.h  global_state.c  global_state.h  hosts.c  hosts.h  json_parser.c  json_parser.h  linkedlist.c  linkedlist.h  log.c  log.h  market.c  market.h  neighbours.c  neighbours.h  p2p.c  p2p.h  paths.c  paths.h  peers.c  peers.h  routing.c  routing.h  trade.c  trade.h  trade_basic.c  trade_basic.h
